infrastructure/kube/keep-dev/tbtc-dapp-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: tbtc-dapp
  namespace: default
  labels:
    keel.sh/policy: all
    app: tbtc
    type: dapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tbtc
      type: dapp
  template:
    metadata:
      labels:
        app: tbtc
        type: dapp
    spec:
      containers:
      - name: tbtc-dapp
        image: gcr.io/keep-dev-fe24/tbtc-dapp
        ports:
          - containerPort: 80
