infrastructure/kube/keep-dev/tbtc-dapp-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: tbtc-dapp
  namespace: tbtc
  labels:
    app: tbtc
    type: dapp
spec:
  ports:
  - port: 80
    targetPort: 80
    name: tcp-80
  selector:
    app: tbtc
    type: dapp
